--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </footer>
 
     <div id="history-modal" class="modal">
-        <div class="modal-box">
+        <div class="modal-box" id="mobal-dox">
             <span class="modal-close" onclick="closeModal('history-modal')">×</span>
             <img src="logo.png" class="logos" alt="logo">
             <h3>"Innovation in Connectivity, Excellence in Service"</h3>
